2003-07-09  Federico Mena Quintero  <federico@ximian.com>

	* e-url-entry.c (destroy): Chain to the parent handler.  Fixes #45236.

2003-06-23  Ettore Perazzoli  <ettore@ximian.com>

	* e-search-bar.c (set_menu): Translate the text.  [#45112]

2003-06-18  Suresh Chandrasekharan  <suresh.chandrasekharan@sun.com>

	* e-charset-picker.c: Fix for #45082: GB18030 BIG5HKSCS and EUC-TW 
	charsets not supported in evolution mail

2003-06-17  Jeffrey Stedfast  <fejj@ximian.com>

	* e-charset-picker.c (e_charset_picker_bonobo_ui_populate): Don't
	use the charset class in the menu label if it is 'Unknown'.
	(e_charset_picker_bonobo_ui_populate): For user-defined charsets,
	just use the name of the charset rather than "Unknown".
	(add_charset): Don't escape _'s anymore, this seems to not be
	needed int gtk2.
	(add_other_charset): g_strdup() the charset name. Fixes bug
	#43917.

2003-06-11  Larry Ewing  <lewing@ximian.com>

	* e-search-bar.c (impl_get_property): take ownership of the duped
	string.
